index.css
html,body {
    height: 100%;
    margin: 0;
}

#map {
    width: auto;
    height: 100%;
    margin: 0;
}

.buttons {
    margin: 5pt;
    pointer-events: auto;
    z-index: 100;
}

.leaflet-popup-content {
    margin: 10px 10px 10px 10px;
}

.leaflet-popup-tip {
    visibility: collapse;
    width: 0px;
    height: 0px;
}

.ufo-image {
    width: 64px;
    height: 64px;
    position:absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    right: 10px;
    display: block;
}

.ufo-popup-container {
    -ms-transform-origin: 50% 50%;
    -moz-transform-origin: 50% 50%;
    -o-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
}

.leaflet-popup-content-wrapper {
    background-color: #efefef;
}

